[PeopleWorks] UPB4860 Gen3 MC03 V5 Rework/AXT CAMC-QI UC LAN/AXL(Library)/C#/AXA.cs

/****************************************************************************
*****************************************************************************
**
** File Name
** ----------
**
** AXA.CS
**
** COPYRIGHT (c) AJINEXTEK Co., LTD
**
*****************************************************************************
*****************************************************************************
**
** Description
** -----------
** Ajinextek Analog Library Header File
** 
**
*****************************************************************************
*****************************************************************************
**
** Source Change Indices
** ---------------------
**
** (None)
**
*****************************************************************************
*****************************************************************************
**
** Website
** ---------------------
**
** http://www.ajinextek.com
**
*****************************************************************************
*****************************************************************************
*/

using System;
using System.Runtime.InteropServices;

public class CAXA
{
//========== 보드 및 모듈 정보 확인 함수 =============================================================
    //AIO 모듈이 있는지 확인한다    
    [DllImport("AXL.dll")] public static extern uint AxaInfoIsAIOModule(ref uint upStatus);
    
    //모듈 No를 확인한다.
    [DllImport("AXL.dll")] public static extern uint AxaInfoGetModuleNo(int lBoardNo, int lModulePos, ref int lpModuleNo);
    
    //AIO 모듈의 개수를 확인한다.
    [DllImport("AXL.dll")] public static extern uint AxaInfoGetModuleCount(ref int lpModuleCount);
    
    //지정한 모듈의 입력 채널 수를 확인한다
    [DllImport("AXL.dll")] public static extern uint AxaInfoGetInputCount(int lModuleNo, ref int lpCount);
    
    //지정한 모듈의 출력 채널 수를 확인한다.
    [DllImport("AXL.dll")] public static extern uint AxaInfoGetOutputCount(int lModuleNo, ref int lpCount);

    //지정한 모듈의 첫 번째 채널 번호를 확인한다.(입력 전용,출력 전용 모듈용)
    [DllImport("AXL.dll")] public static extern uint AxaInfoGetChannelNoOfModuleNo(int lModuleNo, ref int lpChannelNo);
    
    //지정한 모듈의 첫 번째 입력 채널 번호를 확인한다.(입력 모듈, 입력/출력 통합 모듈용)
    [DllImport("AXL.dll")] public static extern uint AxaInfoGetChannelNoAdcOfModuleNo(int lModuleNo, ref int lpChannelNo);

    //지정한 모듈의 첫 번째 출력 채널 번호를 확인한다.(출력 모듈, 입력/출력 통합 모듈용)
    [DllImport("AXL.dll")] public static extern uint AxaInfoGetChannelNoDacOfModuleNo(int lModuleNo, ref int lpChannelNo);
    
    //지정한 모듈 번호로 베이스 보드 번호, 모듈 위치, 모듈 ID를 확인한다.
    [DllImport("AXL.dll")] public static extern uint AxaInfoGetModule(int lModuleNo, ref int lpBoardNo, ref int lpModulePos, ref uint upModuleID);
    
    // 해당 모듈이 제어가 가능한 상태인지 반환한다.
    [DllImport("AXL.dll")] public static extern uint AxaInfoGetModuleStatus(int lModuleNo);
    
//========== 입력 모듈 정보 검색 함수 ================================================================
    //지정한 입력 채널 번호로 모듈 번호를 확인한다.
    [DllImport("AXL.dll")] public static extern uint AxaiInfoGetModuleNoOfChannelNo(int lChannelNo, ref int lpModuleNo);
    
    //아날로그 입력 모듈의 전체 채널 개수를 확인한다.
    [DllImport("AXL.dll")] public static extern uint AxaiInfoGetChannelCount(ref int lpChannelCount);

    //========== 입력 모듈 인터럽트/채널 이벤트 설정 및 확인 함수 ====================================
    //지정한 채널에 이벤트 메시지를 받아오기 위하여 윈도우 메시지, 콜백 함수 또는 이벤트 방식을 사용한다. H/W 타이머(Timer Trigger Mode, External Trigger Mode)를 이용, 연속적 데이터 수집 동작시(AxaStartMultiChannelAdc 참조)에 사용한다.
    // 지정한 모듈에 인터럽트 메시지를 받아오기 위하여 윈도우 메시지, 콜백 함수 또는 이벤트 방식을 사용
    //========= 인터럽트 관련 함수 ======================================================================================
    // 콜백 함수 방식은 이벤트 발생 시점에 즉시 콜백 함수가 호출 됨으로 가장 빠르게 이벤트를 통지받을 수 있는 장점이 있으나
    // 콜백 함수가 완전히 종료 될 때까지 메인 프로세스가 정체되어 있게 된다.
    // 즉, 콜백 함수 내에 부하가 걸리는 작업이 있을 경우에는 사용에 주의를 요한다. 
    // 이벤트 방식은 쓰레드등을 이용하여 인터럽트 발생여부를 지속적으로 감시하고 있다가 인터럽트가 발생하면 
    // 처리해주는 방법으로, 쓰레드 등으로 인해 시스템 자원을 점유하고 있는 단점이 있지만
    // 가장 빠르게 인터럽트를 검출하고 처리해줄 수 있는 장점이 있다.
    // 일반적으로는 많이 쓰이지 않지만, 인터럽트의 빠른처리가 주요 관심사인 경우에 사용된다. 
    // 이벤트 방식은 이벤트의 발생 여부를 감시하는 특정 쓰레드를 사용하여 메인 프로세스와 별개로 동작되므로
    // MultiProcessor 시스템등에서 자원을 가장 효율적으로 사용할 수 있게 되어 특히 권장하는 방식이다.
    // 인터럽트 메시지를 받아오기 위하여 윈도우 메시지 또는 콜백 함수를 사용한다.
    // (메시지 핸들, 메시지 ID, 콜백함수, 인터럽트 이벤트)
    //    hWnd            : 윈도우 핸들, 윈도우 메세지를 받을때 사용. 사용하지 않으면 NULL을 입력.
    //    uMessage        : 윈도우 핸들의 메세지, 사용하지 않거나 디폴트값을 사용하려면 0을 입력.
    //    proc            : 인터럽트 발생시 호출될 함수의 포인터, 사용하지 않으면 NULL을 입력.
    //    pEvent          : 이벤트 방법사용시 이벤트 핸들
    [DllImport("AXL.dll")] public static extern uint AxaiEventSetChannel(int lModuleNo, IntPtr hWnd, uint uMessage, CAXHS.AXT_INTERRUPT_PROC pProc, ref uint pEvent);
    
    //지정한 입력 채널에 이벤트 사용 유무를 설정한다.
    //======================================================
    // uUse        : DISABLE(0)    // 이벤트 해제
    //             : ENABLE(1)     // 이벤트 설정
    //======================================================
    [DllImport("AXL.dll")] public static extern uint AxaiEventSetChannelEnable(int lChannelNo, uint uUse);
    
    //지정한 입력 채널의 이벤트 사용 유무를 확인한다.
    //======================================================
    // *upUse      : DISABLE(0)    // 이벤트 해제
    //             : ENABLE(1)     // 이벤트 설정
    //======================================================
    [DllImport("AXL.dll")] public static extern uint AxaiEventGetChannelEnable(int lChannelNo, ref uint upUse);
    
    //지정한 여러 입력 채널에 이벤트 사용 유무를 설정한다.
    //======================================================
    // lSize       : 사용 할 입력 채널의 갯수
    // lpChannelNo : 사용할 채널 번호의 배열
    // uUse        : DISABLE(0)    // 이벤트 해제
    //             : ENABLE(1)     // 이벤트 설정
    //======================================================
    [DllImport("AXL.dll")] public static extern uint AxaiEventSetMultiChannelEnable(int lSize, int[] lpChannelNo, uint uUse);
    
    //지정한 입력 채널에 이벤트 종류를 설정한다.
    //======================================================
    // uMask       : DATA_EMPTY(1) --> 버퍼에 데이터가 없을 때
    //             : DATA_MANY(2)  --> 버퍼에 데이터가 상한 설정 값보다 많아질 때
    //             : DATA_SMALL(3) --> 버퍼에 데이터가 하한 설정 값보다 적어질 때
    //             : DATA_FULL(4)  --> 버퍼에 데이터가 꽉 찼을 때
    //======================================================
    [DllImport("AXL.dll")] public static extern uint AxaiEventSetChannelMask(int lChannelNo, uint uMask);
    
    //지정한 입력 채널에 이벤트 종류를 확인한다.
    //======================================================
    // *upMask     : DATA_EMPTY(1) --> 버퍼에 데이터가 없을 때
    //             : DATA_MANY(2)  --> 버퍼에 데이터가 상한 설정 값보다 많아질 때
    //             : DATA_SMALL(3) --> 버퍼에 데이터가 하한 설정 값보다 적어질 때
    //             : DATA_FULL(4)  --> 버퍼에 데이터가 꽉 찼을 때
    //======================================================
    [DllImport("AXL.dll")] public static extern uint AxaiEventGetChannelMask(int lChannelNo, ref uint upMask);
    
    //지정한 여러 입력 채널에 이벤트 종류를 설정한다.
    //======================================================
    // lSize       : 사용 할 입력 채널의 갯수
    // lpChannelNo : 사용할 채널 번호의 배열
    // uMask       : DATA_EMPTY(1) --> 버퍼에 데이터가 없을 때
    //             : DATA_MANY(2)  --> 버퍼에 데이터가 상한 설정 값보다 많아질 때
    //             : DATA_SMALL(3) --> 버퍼에 데이터가 하한 설정 값보다 적어질 때
    //             : DATA_FULL(4)  --> 버퍼에 데이터가 꽉 찼을 때
    //======================================================
    [DllImport("AXL.dll")] public static extern uint AxaiEventSetMultiChannelMask(int lSize, int[] lpChannelNo, uint uMask);
    
    //이벤트 발생 위치를 확인한다.
    //======================================================
    // *upMode     : AIO_EVENT_DATA_UPPER(1) --> 버퍼에 데이터가 상한 설정 값보다 많아질 때
    //             : AIO_EVENT_DATA_LOWER(2) --> 버퍼에 데이터가 하한 설정 값보다 적어질 때
    //             : AIO_EVENT_DATA_FULL(3)  --> 버퍼에 데이터가 꽉 찼을 때
    //             : AIO_EVENT_DATA_EMPTY(4) --> 버퍼에 데이터가 없을 때
    //======================================================
    [DllImport("AXL.dll")] public static extern uint AxaiEventRead(ref int lpChannelNo, ref uint upMode);
    
    //지정한 모듈의 인터럽트 마스크를 설정한다. 이 함수는 연속적 신호감시를 할 경우에 하드웨어(모듈)의 FIFO 에서 사용자가 
    //지정한 크기의 버퍼로 내부 인터럽트를 통한 데이터 이동 시점을 지정하기 위해 사용된다. (SIO-AI4RB는 지원하지 않는다.)
    //==================================================================================================//
    // uMask       : SCAN_END(1)       --> 셋팅된 채널 모두  ADC 변환이 한번 이루어 질 때 마다 인터럽트가 발생
    //             : FIFO_HALF_FULL(2) --> 모듈내의 FIFO가 HALF이상 찼을 경우 내부 인터럽트 발생
    //==================================================================================================//
    [DllImport("AXL.dll")] public static extern uint AxaiInterruptSetModuleMask(int lModuleNo, uint uMask);
    
    //지정한 모듈의 인터럽트 마스크를 확인한다.
    //==================================================================================================//
    // *upMask     : SCAN_END(1)       --> 셋팅된 채널 모두  ADC 변환이 한번 이루어 질 때 마다 인터럽트가 발생
    //             : FIFO_HALF_FULL(2) --> 모듈내의 FIFO가 HALF이상 찼을 경우 내부 인터럽트 발생
    //==================================================================================================//
    [DllImport("AXL.dll")] public static extern uint AxaiInterruptGetModuleMask(int lModuleNo, ref uint upMask);
    
//========== 입력 모듈 파라미터 설정 및 확인 함수 ========================================================================
    //지정한 입력 채널에 입력 전압 범위를 설정한다.
    //==================================================================================================//
    // AI4RB
    // dMinVolt    : -10V/-5V로 설정 가능
    // dMaxVolt    : 10V/5V/로 설정 가능
    //
    // AI16Hx
    // dMinVolt    : -10V 고정
    // dMaxVolt    : 10V 고정
    //==================================================================================================//
    [DllImport("AXL.dll")] public static extern uint AxaiSetRange(int lChannelNo, double dMinVolt, double dMaxVolt);
    
    //지정한 입력 채널의 입력 전압 범위를 확인한다.
    //==================================================================================================//
    // AI4RB
    // *dpMinVolt  : -10V/-5V로 설정 가능
    // *dpMaxVolt  : 10V/5V/로 설정 가능
    //
    // AI16Hx
    // *dpMaxVolt  : -10V 고정
    // *dpMaxVolt  : 10V 고정
    //==================================================================================================//
    [DllImport("AXL.dll")] public static extern uint AxaiGetRange(int lChannelNo, ref double dpMinVolt, ref double dpMaxVolt);

    //지정한 여러 입력 모듈에 허용 입력 전압 범위를 설정한다.
    //==================================================================================================//
    // lModuleNo   : 사용할 입력 모듈 번호
    //
    // RTEX AI16F
    // Mode -5~+5  : dMinVolt = -5, dMaxVolt = +5
    // Mode -10~+10: dMinVolt = -10, dMaxVolt = +10
    //==================================================================================================//
    [DllImport("AXL.dll")] public static extern uint AxaiSetRangeModule(int lModuleNo, double dMinVolt, double dMaxVolt);

    //지정한 여러 입력 모듈에 허용 입력 전압 범위를 확인한다.
    //==================================================================================================//
    // lModuleNo   : 사용할 입력 모듈 번호
    //
    // RTEX AI16F
    // *dMinVolt   : -5V, -10V
    // *dMaxVolt   : +5V, +10V
    //==================================================================================================//
    [DllImport("AXL.dll")] public static extern uint AxaiGetRangeModule(int lModuleNo, ref double dMinVolt, ref double dMaxVolt);
    
    //지정한 여러 입력 채널에 허용 입력 전압 범위를 설정한다.
    //==================================================================================================//
    // lSize        : 사용할 입력 채널의 개수
    // *lpChannelNo : 사용할 채널 번호의 배열
    //
    // AI4RB
    // dMinVolt    : -10V/-5V로 설정 가능
    // dMaxVolt    : 10V/5V/로 설정 가능
    //
    // AI16Hx
    // dMinVolt    : -10V
    // dMaxVolt    : 10V
    //==================================================================================================//
    [DllImport("AXL.dll")] public static extern uint AxaiSetMultiRange(int lSize, int[] lpChannelNo, double dMinVolt, double dMaxVolt);
